[gd_scene load_steps=14 format=3 uid="uid://cyixig4k005g2"]

[ext_resource type="PackedScene" uid="uid://bn7ox8ndvvus3" path="res://Menu/Level_selection/level_icon.tscn" id="1_6d3ir"]
[ext_resource type="Script" path="res://Menu/Level_selection/level_select.gd" id="1_agn08"]
[ext_resource type="Texture2D" uid="uid://c2lm6xu3c5kvo" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/1.png" id="2_nydxs"]
[ext_resource type="PackedScene" uid="uid://d0a5l2rqdwore" path="res://Menu/Level_selection/player_icon.tscn" id="3_f6sg4"]
[ext_resource type="Texture2D" uid="uid://buhuoltsrv0pi" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/2.png" id="3_jctu1"]
[ext_resource type="Texture2D" uid="uid://cqtnciy2blyg2" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/3.png" id="4_cxu02"]
[ext_resource type="PackedScene" uid="uid://m3j3b1thyllb" path="res://Levels/Bg/bg.tscn" id="4_lu7ca"]
[ext_resource type="Texture2D" uid="uid://cf255v16wpnw5" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/4.png" id="5_p2w5u"]
[ext_resource type="Texture2D" uid="uid://bjy0wdopu3yc0" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/5.png" id="6_h8ayh"]
[ext_resource type="Texture2D" uid="uid://b6b0rerhu8kro" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/6.png" id="7_pvobd"]
[ext_resource type="Texture2D" uid="uid://pjtfd3uurxaq" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/7.png" id="8_0d7ii"]
[ext_resource type="Texture2D" uid="uid://dk7plkh7xhnc2" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/8.png" id="9_ej6p3"]
[ext_resource type="Texture2D" uid="uid://bifdgc0560q7u" path="res://Assets/Treasure Hunters/Wood and Paper UI/Sprites/Orange Paper/9.png" id="10_b1vb1"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agn08")

[node name="BG" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="BG"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 192.0
texture = ExtResource("2_nydxs")

[node name="TextureRect2" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 192.0
texture = ExtResource("3_jctu1")

[node name="TextureRect10" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 384.0
offset_right = 576.0
offset_bottom = 192.0
texture = ExtResource("3_jctu1")

[node name="TextureRect11" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 576.0
offset_right = 768.0
offset_bottom = 192.0
texture = ExtResource("3_jctu1")

[node name="TextureRect12" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 768.0
offset_right = 960.0
offset_bottom = 192.0
texture = ExtResource("3_jctu1")

[node name="TextureRect3" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 960.0
offset_right = 1152.0
offset_bottom = 192.0
texture = ExtResource("4_cxu02")

[node name="TextureRect4" type="TextureRect" parent="BG"]
layout_mode = 0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 384.0
texture = ExtResource("5_p2w5u")

[node name="TextureRect5" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 384.0
offset_bottom = 384.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect13" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 384.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect14" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 576.0
offset_top = 192.0
offset_right = 768.0
offset_bottom = 384.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect15" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 960.0
offset_bottom = 384.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect6" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 960.0
offset_top = 192.0
offset_right = 1152.0
offset_bottom = 384.0
texture = ExtResource("7_pvobd")

[node name="TextureRect16" type="TextureRect" parent="BG"]
layout_mode = 0
offset_top = 384.0
offset_right = 192.0
offset_bottom = 576.0
texture = ExtResource("5_p2w5u")

[node name="TextureRect17" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 192.0
offset_top = 384.0
offset_right = 384.0
offset_bottom = 576.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect18" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 384.0
offset_top = 384.0
offset_right = 576.0
offset_bottom = 576.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect19" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 576.0
offset_top = 384.0
offset_right = 768.0
offset_bottom = 576.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect20" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 768.0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 576.0
texture = ExtResource("6_h8ayh")

[node name="TextureRect21" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 960.0
offset_top = 384.0
offset_right = 1152.0
offset_bottom = 576.0
texture = ExtResource("7_pvobd")

[node name="TextureRect7" type="TextureRect" parent="BG"]
layout_mode = 0
offset_top = 576.0
offset_right = 192.0
offset_bottom = 768.0
texture = ExtResource("8_0d7ii")

[node name="TextureRect8" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 192.0
offset_top = 576.0
offset_right = 384.0
offset_bottom = 768.0
texture = ExtResource("9_ej6p3")

[node name="TextureRect22" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 384.0
offset_top = 576.0
offset_right = 576.0
offset_bottom = 768.0
texture = ExtResource("9_ej6p3")

[node name="TextureRect23" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 576.0
offset_top = 576.0
offset_right = 768.0
offset_bottom = 768.0
texture = ExtResource("9_ej6p3")

[node name="TextureRect24" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 768.0
offset_top = 576.0
offset_right = 960.0
offset_bottom = 768.0
texture = ExtResource("9_ej6p3")

[node name="TextureRect9" type="TextureRect" parent="BG"]
layout_mode = 0
offset_left = 960.0
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 768.0
texture = ExtResource("10_b1vb1")

[node name="LevelIcon" parent="." node_paths=PackedStringArray("next_level_right") instance=ExtResource("1_6d3ir")]
offset_left = 96.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 192.0
next_scene_path = "res://Levels/level_test.tscn"
next_level_right = NodePath("../LevelIcon2")

[node name="LevelIcon2" parent="." node_paths=PackedStringArray("next_level_left", "next_level_right") instance=ExtResource("1_6d3ir")]
offset_left = 400.0
offset_top = 104.0
offset_right = 464.0
offset_bottom = 168.0
level_name = "2"
next_level_left = NodePath("../LevelIcon")
next_level_right = NodePath("../LevelIcon3")

[node name="LevelIcon3" parent="." node_paths=PackedStringArray("next_level_left", "next_level_right") instance=ExtResource("1_6d3ir")]
offset_left = 704.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 192.0
level_name = "3"
next_level_left = NodePath("../LevelIcon2")
next_level_right = NodePath("../LevelIcon4")

[node name="LevelIcon4" parent="." node_paths=PackedStringArray("next_level_left") instance=ExtResource("1_6d3ir")]
offset_left = 992.0
offset_top = 104.0
offset_right = 1056.0
offset_bottom = 168.0
level_name = "4"
next_level_left = NodePath("../LevelIcon3")

[node name="PlayerIcon" parent="." instance=ExtResource("3_f6sg4")]
layout_mode = 0
offset_left = -32.0
offset_top = 0.0
offset_right = 32.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
expand_mode = 0
stretch_mode = 6

[node name="ParallaxBackground" parent="." instance=ExtResource("4_lu7ca")]
